@@ -5,6 +5,7 @@ Version 1.4.x (not yet released)
  * Support multicomponent --trunk, --tags, and --branches paths (issue #7).
  * New --auto-props option allows file properties to be set via file.
  * --force-branch and --force-tag options now accept regular expressions.
+ * Add --symbol-default option.
 
  Bugs fixed:
  * Fix issue #93: Tags with forbidden characters converted to branches.
